--- a/branch-test.html
+++ b/branch-test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Branching practice site</title>
 </head>
 <body>
